test/mutation_analysis/s0263_ugly_number/hafis/ablation_o3_full/mutants/19/result.txt
./test/mutation_analysis/s0263_ugly_number/hafis/ablation_o3_full/mutants/19/Solution.java:19: error: unreachable statement
            while (false) {
                          ^
1 error
